--- a/site.yml
+++ b/site.yml
@@ -14,6 +14,12 @@
 - hosts: web_server
   become: true
   tasks:
+
+  - name: update the package
+    tags: update
+    yum:
+      update_cache: yes
+    changed_when: false
   
   - name: install apache on Centos
     yum:
@@ -48,3 +54,32 @@
       owner: root
       group: root
       mode: 0644
+
+- hosts: web_server
+  become: true
+  tasks: 
+
+  - name: change the email of httpd config file
+    tags: email
+    lineinfile:
+      path: /etc/httpd/conf/httpd.conf
+      regexp: "^ServerAdmin"
+      line: ServerAdmin nourelddin@example1.com
+    register: httpd
+  - name: restart httpd service
+    tags: email
+    service:
+      name: httpd
+      state: restarted
+      enabled: yes
+    when: httpd.changed
+  
+
+  - name: add user to my CentOS server
+    tags: user
+    user:
+      name: test
+      group: root
+
+
+
