--- a/site.yml
+++ b/site.yml
@@ -1,85 +1,18 @@
 ---
 - hosts: all
   become: true
-  tasks:
-  
-  - name: install wget server on centos 7
-    package:
-      name: "{{ package_name }}"
-      state: present
-    when: ansible_distribution == "CentOS"
-
-
+  roles:
+    - base
 
 - hosts: web_server
   become: true
-  tasks:
-
-  - name: update the package
-    tags: update
-    yum:
-      update_cache: yes
-    changed_when: false
-  
-  - name: install apache on Centos
-    yum:
-      name: httpd
-      state: latest
+  roles:
+    - web_server
 
 
-  - name: copy file to my CentOS server
-    copy:
-      src: default_site.html
-      dest: /var/www/html/index.html
-      owner: root
-      group: root
-      mode: 0644
 
 - hosts: workstation
   become: true
-  tasks:
+  roles:
+    - workstation
   
-  - name: install unzip on my workstation
-    tags: workstation
-    package:
-      name: unzip
-      state: latest
-
-  - name: install terraform
-    tags: workstation
-    unarchive:
-      src: https://releases.hashicorp.com/terraform/1.3.4/terraform_1.3.4_linux_386.zip
-      dest: /usr/local/bin
-      remote_src: yes
-      owner: root
-      group: root
-      mode: 0644
-
-- hosts: web_server
-  become: true
-  tasks: 
-
-  - name: change the email of httpd config file
-    tags: email
-    lineinfile:
-      path: /etc/httpd/conf/httpd.conf
-      regexp: "^ServerAdmin"
-      line: ServerAdmin nourelddin@example1.com
-    register: httpd
-  - name: restart httpd service
-    tags: email
-    service:
-      name: httpd
-      state: restarted
-      enabled: yes
-    when: httpd.changed
-  
-
-  - name: add user to my CentOS server
-    tags: user
-    user:
-      name: test
-      group: root
-
-
-
